--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,16 +1,182 @@
-/**
- * These are the variables used throughout the application. This is where
- * overwrites that are not specific to components should be maintained.
- */
 
-@import '../../vendor/bootstrap/less/variables.less';
+// from boostrap
+// Variables
+// --------------------------------------------------
 
 
-/**
- * Typography-related.
- */
+// Global values
+// --------------------------------------------------
 
-//@sansFontFamily: 'Roboto', sans-serif;
 
+// Grays
+// -------------------------
+@black:                 #000;
+@grayDarker:            #222;
+@grayDark:              #333;
+@gray:                  #555;
+@grayLight:             #999;
+@grayLighter:           #eee;
+@white:                 #fff;
+
+
+// Accent colors
+// -------------------------
+@blue:                  #049cdb;
+@blueDark:              #0064cd;
+@green:                 #46a546;
+@red:                   #9d261d;
+@yellow:                #ffc40d;
+@orange:                #f89406;
+@pink:                  #c3325f;
+@purple:                #7a43b6;
+
+
+// Scaffolding
+// -------------------------
+@bodyBackground:        @white;
+@textColor:             @grayDark;
+
+
+// Links
+// -------------------------
+@linkColor:             #08c;
+@linkColorHover:        darken(@linkColor, 15%);
+
+
+// Typography
+// -------------------------
+@sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
+@serifFontFamily:       Georgia, "Times New Roman", Times, serif;
+@monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
+
+@baseFontSize:          14px;
+@baseFontFamily:        @sansFontFamily;
+@baseLineHeight:        20px;
+@altFontFamily:         @serifFontFamily;
+
+@headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
+@headingsFontWeight:    bold;    // instead of browser default, bold
+@headingsColor:         inherit; // empty to use BS default, @textColor
+
+
+// Component sizing
+// -------------------------
+// Based on 14px font-size and 20px line-height
+
+@fontSizeLarge:         @baseFontSize * 1.25; // ~18px
+@fontSizeSmall:         @baseFontSize * 0.85; // ~12px
+@fontSizeMini:          @baseFontSize * 0.75; // ~11px
+
+@paddingLarge:          11px 19px; // 44px
+@paddingSmall:          2px 10px;  // 26px
+@paddingMini:           0 6px;   // 22px
+
+@baseBorderRadius:      4px;
+@borderRadiusLarge:     6px;
+@borderRadiusSmall:     3px;
+
+// Form states and alerts
+// -------------------------
+@warningText:             #c09853;
+@warningBackground:       #fcf8e3;
+@warningBorder:           darken(spin(@warningBackground, -10), 3%);
+
+@errorText:               #b94a48;
+@errorBackground:         #f2dede;
+@errorBorder:             darken(spin(@errorBackground, -10), 3%);
+
+@successText:             #468847;
+@successBackground:       #dff0d8;
+@successBorder:           darken(spin(@successBackground, -10), 5%);
+
+@infoText:                #3a87ad;
+@infoBackground:          #d9edf7;
+@infoBorder:              darken(spin(@infoBackground, -10), 7%);
+
+
+// flatUI
+// Variables
+// --------------------------------------------------
+
+// Global values
+// --------------------------------------------------
+
+//
+// Color Swatches
+// --------------------------------------------------
+@turquoise:     #1abc9c;
+@green-sea:     #16a085;
+
+@emerald:      #2ecc71;
+@nephritis:     #27ae60;
+
+@peter-river:   #3498db;
+@belize-hole:   #2980b9;
+
+@amethyst:      #9b59b6;
+@wisteria:      #8e44ad;
+
+@wet-asphalt:   #34495e;
+@midnight-blue: #2c3e50;
+
+@sun-flower:    #f1c40f;
+@orange:        #f39c12;
+
+@carrot:        #e67e22;
+@pumpkin:       #d35400;
+
+@alizarin:      #e74c3c;
+@pomegranate:   #c0392b;
+
+@clouds:        #ecf0f1;
+@silver:        #bdc3c7;
+
+@concrete:      #95a5a6;
+@asbestos:      #7f8c8d;
+
+// Main Colors
+// -------------------------
+@base:             @wet-asphalt;
+@firm:             @turquoise;
+
+@gray:             @concrete;
+@lightgray:        @silver;
+@inverse:          white;
+
+@success:          @emerald;
+@danger:           @alizarin;
+@warning:          @sun-flower;
+@info:             @peter-river;
+
+@link-color:       @green-sea;
+@link-hover-color: @turquoise;
+
+// Icons
+@icon-normal: 16px;
+@icon-medium: 18px;
+@icon-large:  32px;
+
+// Inputs
+// -------------------------
+@input-border-radius: 6px;
+
+// Buttons
+@button-text:           @inverse;
+@button-hover:          mix(@lightgray, white, 80%);
+@button-active:         mix(@lightgray, black, 85%);
+@button-primary-hover:  mix(@firm, white, 80%);
+@button-primary-active: mix(@firm, black, 85%);
+@button-info-hover:     mix(@info, white, 80%);
+@button-info-active:    mix(@info, black, 85%);
+@button-success-hover:  mix(@success, white, 80%);
+@button-success-active: mix(@success, black, 85%);
+@button-danger-hover:   mix(@danger, white, 80%);
+@button-danger-active:  mix(@danger, black, 85%);
+@button-warning-hover:  overlay(@warning, darken(white, 37.5%));
+@button-warning-active: mix(@warning, black, 85%);
+@button-inverse-hover:  overlay(@base, darken(white, 37.5%));
+@button-inverse-active: mix(@base, black, 85%);
+
+//@import '../../vendor/bootstrap/less/variables.less';
 @headerHeight:  42px;
 @footerHeight:  0px;
