--- a/src/common/scroll/scroll.less
+++ b/src/common/scroll/scroll.less
@@ -13,6 +13,48 @@
  * Pull down styles
  *
  */
+
+@-webkit-keyframes loading {
+  from { -webkit-transform:rotate(0deg) translateZ(0); }
+  to { -webkit-transform:rotate(360deg) translateZ(0); }
+}
+
+.pull{
+  height:40px;
+  line-height:40px;
+  padding:5px 10px;
+  border-bottom:1px solid #ccc;
+  font-weight:bold;
+  font-size:14px;
+  color:#888;
+  text-align: center;
+  .pullIcon{
+    display:block; float:left;
+    width:40px; height:40px;
+    background:url(pull-icon@2x.png) 0 0 no-repeat;
+    -webkit-background-size:40px 80px; background-size:40px 80px;
+    -webkit-transition-property:-webkit-transform;
+    -webkit-transition-duration:250ms;
+    &.pullDown{
+      -webkit-transform:rotate(0deg) translateZ(0);
+      &.flip{
+        -webkit-transform:rotate(-180deg) translateZ(0);
+      }
+    }
+    &.loading{
+      background-position:0 100%;
+      -webkit-transform:rotate(0deg) translateZ(0);
+      -webkit-transition-duration:0ms;
+
+      -webkit-animation-name:loading;
+      -webkit-animation-duration:2s;
+      -webkit-animation-iteration-count:infinite;
+      -webkit-animation-timing-function:linear;
+    }
+
+  }
+}
+
 #pullDown, #pullUp {
   background:#fff;
   height:40px;
