--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,8 +26,53 @@
   margin: 0;
   padding: 0;
 }
-body{
+html, body, .viewport{
   .user-select(none);
   position: relative;
   height:100%;
+}
+
+.header{
+  .fixbar;
+}
+
+.content{
+//  position: absolute;
+//  .transform(translate3d(0,0,0));
+//  -webkit-transform: translate3d(0,-51px,0);
+}
+
+@-webkit-keyframes loading {
+  from { -webkit-transform:rotate(0deg) translateZ(0); }
+  to { -webkit-transform:rotate(360deg) translateZ(0); }
+}
+
+.pull{
+  height:40px;
+  line-height:40px;
+  padding:5px 10px;
+  border-bottom:1px solid #ccc;
+  font-weight:bold;
+  font-size:14px;
+  color:#888;
+  text-align: center;
+  .pullIcon{
+    display:block; float:left;
+    width:40px; height:40px;
+    background:url(pull-icon@2x.png) 0 0 no-repeat;
+    -webkit-background-size:40px 80px; background-size:40px 80px;
+    -webkit-transition-property:-webkit-transform;
+    -webkit-transition-duration:250ms;
+    &.pullDown{
+      &.flip{
+        -webkit-transform:rotate(-180deg)
+      }
+    }
+    &.loading{
+      background-position:0 100%;
+      -webkit-transform:rotate(0deg);
+      -webkit-transition-duration:0ms;
+      .animation(loading 2s linear 0 infinite);
+    }
+  }
 }
