--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -9,27 +9,30 @@
                 <a class="option pull-right" ng-click="onRefresh()"><i class="icon-refresh icon-large"></i></a>
             </div>
 
-            <div class="content" hscroll>
-                <div class="pull pullDown" ng-init="pullText=['下拉可以刷新...', '松开即可刷新...', '加载中...']; pullStatus=2">
+            <div class="content" ihscroll imargin=20 ipull>
+                <div class="pull pullDown" ng-init="pullText=['下拉可以刷新...', '松开即可刷新...', '加载中...', '加载更多...']; pullStatus=2">
                     <span class="pullIcon pullDown" ng-class="{flip:pullStatus==1,loading:pullStatus==2}"></span>
-                    <span class="pullDownLabel">{{pullText[pullStatus]}}</span>
+                    <span>{{pullText[pullStatus]}}</span>
                 </div>
-                <div class="clearfix pas" ng-repeat="e in objects">
-                    <div class="pull-left pas">
-                        <img ng-src="{{meta.imgbase}}{{e.image.thumbnail2}}"/>
-                    </div>
-                    <div class="pull-left">
-                        <span><strong>{{e.title}}</strong></span><br>
-                        <span class="event_attr event_ca">类别：{{e.ca}}</span><br>
-                        <span class="event_attr event_time">时间：{{e.start_time| date:'MM月dd日 HH:mm'}}</span><br>
-                        <span class="event_attr event_avenue">地点：{{e.avenue}}</span>
-                    </div>
-                    <div class="pull-right">
-                        <span>{{status[e.status+1]}}</span>
+                <div>
+                    <div class="clearfix pas" ng-repeat="e in objects">
+                        <div class="pull-left pas">
+                            <img ng-src="{{meta.imgbase}}{{e.image.thumbnail2}}"/>
+                        </div>
+                        <div class="pull-left">
+                            <span><strong>{{e.title}}</strong></span><br>
+                            <span class="event_attr event_ca">类别：{{e.ca}}</span><br>
+                            <span class="event_attr event_time">时间：{{e.start_time| date:'MM月dd日 HH:mm'}}</span><br>
+                            <span class="event_attr event_avenue">地点：{{e.avenue}}</span>
+                        </div>
+                        <div class="pull-right">
+                            <span>{{status[e.status+1]}}</span>
+                        </div>
                     </div>
                 </div>
-                <div id="pullUp" class="idle" ng-click="onMore()">
-                    <span class="pullUpIcon"></span><span class="pullUpLabel">加载更多...</span>
+                <div class="pull pullUp" ng-class="{hide:moreStatus==0}" ng-click="onMore()" ng-init="moreStatus=0">
+                    <span class="pullIcon pullUp" ng-class="{loading:moreStatus==2}"></span>
+                    <span ng-bind="pullText[moreStatus]"></span>
                 </div>
             </div>
 
