--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -138,7 +138,7 @@
 
             <p>
                 <a class="btn btn-primary" ng-click="onSubmit()">确定</a>
-                <a class="btn btn-inverse" ng-click="goBack()">取消</a>
+                <a class="btn btn-inverse" ng-click="turnBack(2)">取消</a>
             </p>
         </form>
 
