--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -66,9 +66,9 @@
 .faces{
   .fill;
   .preserve3d();
-  .transition(all 1.0s linear);
   .face{
     .fill;
+    background: #ffffff;
   }
 }
 
@@ -106,7 +106,7 @@
         .transform(translate3d(0, 0, 0));
       }
     }
-    .transition(all 1.0s ease-in-out);
+    .transition(all 0.5s ease-in-out);
   }
 }
 
