--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -9,21 +9,21 @@
                 <a class="option pull-right" ng-click="onRefresh()"><i class="icon-refresh icon-large"></i></a>
             </div>
 
-            <div class="content" ihscroll imargin=20 ipull>
+            <div class="content" ivscroll imargin=20 ipull="pullStatus">
                 <div class="pull pullDown" ng-init="pullText=['下拉可以刷新...', '松开即可刷新...', '加载中...', '加载更多...']; pullStatus=2">
                     <span class="pullIcon pullDown" ng-class="{flip:pullStatus==1,loading:pullStatus==2}"></span>
                     <span>{{pullText[pullStatus]}}</span>
                 </div>
                 <div>
-                    <div class="clearfix pas" ng-repeat="e in objects">
+                    <div class="clearfix pas" ng-repeat="e in objects" ng-click="onDetail(e)">
                         <div class="pull-left pas">
                             <img ng-src="{{meta.imgbase}}{{e.image.thumbnail2}}"/>
                         </div>
                         <div class="pull-left">
                             <span><strong>{{e.title}}</strong></span><br>
-                            <span class="event_attr event_ca">类别：{{e.ca}}</span><br>
-                            <span class="event_attr event_time">时间：{{e.start_time| date:'MM月dd日 HH:mm'}}</span><br>
-                            <span class="event_attr event_avenue">地点：{{e.avenue}}</span>
+                            <span>类别：{{e.ca}}</span><br>
+                            <span>时间：{{e.start_time| date:'MM月dd日 HH:mm'}}</span><br>
+                            <span>地点：{{e.avenue}}</span>
                         </div>
                         <div class="pull-right">
                             <span>{{status[e.status+1]}}</span>
@@ -37,7 +37,19 @@
             </div>
 
         </div>
-        <div id="layer2" class="layer layer-left" ng-class="{present: layer>=2}"> layer2 </div>
+        <div id="layer2" class="layer layer-shrink" ng-class="{present: layer>=2}">
+            <div class="face-container">
+                <div class="faces" ng-class="{turnfront:back===false,turnback:back}"  ng-init="back=0">
+                    <div class="face" ng-class="{back:back}">
+                        <div ng-include="'detail/detail.tpl.html'" ng-controller="DetailCtrl"></div>
+                    </div>
+                    <div class="face" ng-class="{back:!back}">
+                        <div ng-include="'edit/edit.tpl.html'" ng-controller="EditCtrl"></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         <div id="layer3" class="layer layer-right" ng-class="{present: layer>=3}"> layer3 </div>
         <div id="layer4" class="layer layer-shrink" ng-class="{present: layer>=4}"> layer4 </div>
     </div>
