--- a/src/less/main.less
+++ b/src/less/main.less
@@ -35,12 +35,13 @@ html, body, .viewport{
 
 .header{
   .fixbar;
+  .option{
+    .phm;
+  }
 }
 
 .content{
-//  position: absolute;
-//  .transform(translate3d(0,0,0));
-//  -webkit-transform: translate3d(0,-51px,0);
+
 }
 
 @-webkit-keyframes loading {
