--- a/src/less/mixinx.less
+++ b/src/less/mixinx.less
@@ -173,6 +173,22 @@
   backface-visibility: @visibility;
 }
 
+// Background clipping
+// Heads up: FF 3.6 and under need "padding" instead of "padding-box"
+.background-clip(@clip) {
+  -webkit-background-clip: @clip;
+  -moz-background-clip: @clip;
+  background-clip: @clip;
+}
+
+// Background sizing
+.background-size(@size) {
+  -webkit-background-size: @size;
+  -moz-background-size: @size;
+  -o-background-size: @size;
+  background-size: @size;
+}
+
 // User select
 // For selecting text on the page
 .user-select(@select) {
@@ -189,7 +205,11 @@
   overflow: auto; // Safari fix
 }
 
-
+// Opacity
+.opacity(@opacity) {
+  opacity: @opacity / 100;
+  filter: ~"alpha(opacity=@{opacity})";
+}
 // UTILITY MIXINS
 // --------------------------------------------------
 
