--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -94,6 +94,18 @@
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
 
+// Z-index master list
+// -------------------------
+// Used for a bird's eye view of components dependent on the z-axis
+// Try to avoid customizing these :)
+@zindexDropdown:          1000;
+@zindexPopover:           1010;
+@zindexTooltip:           1030;
+@zindexFixedNavbar:       1030;
+@zindexModalBackdrop:     1040;
+@zindexModal:             1050;
+
+
 // flatUI
 // Variables
 // --------------------------------------------------
