--- a/src/less/main.less
+++ b/src/less/main.less
@@ -88,3 +88,14 @@ html, body, .viewport{
     }
   }
 }
+
+.tabs-navs{
+  background: gainsboro;
+  border-bottom: 4px burlywood solid;
+  span{
+    .pvs;
+    &.active{
+      background: greenyellow;
+    }
+  }
+}
