--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -20,15 +20,25 @@
 .show {
   display: block;
 }
-
 // Visibility
 .invisible {
   visibility: hidden;
 }
-
 .fixed {
   position: fixed;
 }
+.relative{
+  position: relative;
+}
+.absolute{
+  position: absolute;
+}
+
+.background{
+  background: @bodyBackground;
+}
+
+
 
 .fill{
   position: absolute;
