--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -32,17 +32,16 @@
                     <a class="btn btn-inverse" ng-click="onUpload()">上传照片</a>
                 </div>
 
-                <div class="container" ifill-bottom=3 ihtabs="card" ng-init="select=0">
-                    <div ihtabs-padding=30 class="tabs-navs">
+                <div class="container" ifill-bottom="recursive" ifill-margin=5 ng-init="select=0">
+                    <div  ihtabs="select" ihtabs-padding=20 class="tabs-navs" style="background: beige">
                         <span ng-click="select=0" ng-class="{active: select==0}">活动简介</span>
                         <span ng-click="select=1" ng-class="{active: select==1}">活动讨论</span>
                         <span ng-click="select=2"  ng-class="{active: select==2}">活动照片</span>
                     </div>
 
-                    <div ihtabs-bar class="tabs-bar mvs"></div>
+                    <div ihtabs-bar class="tabs-bar pvs background"></div>
 
-                    <div class="container">
-                    <div ihshift="select" ihshift-margin=40>
+                    <div ihshift="select" ihshift-margin=40 ifill-bottom="nested" style="z-index: -1;">
                         <div style="background: blanchedalmond" ivscroll ivreset="e">
                             <p style="white-space:pre-wrap">{{e.description}}</p>
                             <hr>
@@ -89,7 +88,6 @@
                             </a>
                         </div>
 
-                    </div>
                     </div>
                 </div>
 
