--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -39,7 +39,7 @@
                         <span ng-click="select=2"  ng-class="{active: select==2}">活动照片</span>
                     </div>
 
-                    <div ihtabs-bar class="tabs-bar pvs background"></div>
+                    <div ihtabs-bar="blue" class="tabs-bar" style="height: 5px"></div>
 
                     <div ihshift="select" ihshift-margin=40 ifill-bottom="nested" style="z-index: -1;">
                         <div style="background: blanchedalmond" ivscroll ivreset="e">
