--- a/src/less/main.less
+++ b/src/less/main.less
@@ -88,10 +88,12 @@ html, body, .viewport{
     }
   }
 }
-
+.tabs-bar{
+  background: burlywood;
+}
 .tabs-navs{
   background: gainsboro;
-  border-bottom: 4px burlywood solid;
+//  border-bottom: 4px burlywood solid;
   span{
     .pvs;
     &.active{
